{{$NEXT}}

1.302105  2017-10-20 07:09:45-07:00 America/Los_Angeles

    - No changes since last trial

1.302104  2017-10-19 11:39:01-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Combine multiple diags into one event

1.302103  2017-10-15 10:11:29-07:00 America/Los_Angeles

    - No changes since last TRIAL

1.302102  2017-10-14 20:05:45-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix some TODO edge cases that were not previously accounted for

1.302101  2017-10-12 07:43:16-07:00 America/Los_Angeles

    - Bump Test::Builder::IO::Scalar version for core

1.302100  2017-10-10 14:30:18-07:00 America/Los_Angeles

    - No changes since last TRIAL

1.302099  2017-10-10 09:29:40-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix run_subtest inherit_trace option

1.302098  2017-10-03 06:13:49-07:00 America/Los_Angeles

    - Add docs for test2_stdout and test2_stderr
    - Fix 5.6 support

1.302097  2017-10-02 19:35:08-07:00 America/Los_Angeles

    - Fix hub->process bug that could let an error pass
    - Fix #789 (Modification of read only value)
    - Fix typo in Test::Builder when looking for IPC (#777)
    - Fix #791, clone_io broke on scalar io layer
    - Fix #790 and #756, Exception event stingify exception
    - Localize $^E in context (#780)
    - Fix test that failed in verbose mode (#770)

1.302096  2017-09-10 21:16:18-07:00 America/Los_Angeles

    - Fix to work with subref-in-stash optimisation (Father C.)

1.302095  2017-08-31 20:35:22-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make several tests work with preload

1.302094  2017-08-30 21:27:23-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix Test::Builder in a preload scenario

1.302093  2017-08-29 21:05:20-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make sure Test::Builder does not initialize Test2 too soon.

1.302092  2017-08-28 21:30:06-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix bug in Facets for TodoDiag
    - Add API command to reset after a fork