@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make version number in HashBase sane.
+
 1.302105  2017-10-20 07:09:45-07:00 America/Los_Angeles
 
     - No changes since last trial
